clusters/my-cluster/Photoprism/photoprism.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
  namespace: default
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
        name: photoprism
        app.kubernetes.io/name: photoprism
    spec:
      containers:
      - name: photoprism
        image: photoprism/photoprism:latest
        ports:
        - containerPort: 2342
          name: http
        volumeMounts:
        - mountPath: /photoprism/originals
          name: photoprism-originals
        - mountPath: /photoprism/storage
          name: photoprism-storage
        readinessProbe:
          httpGet:
            path: /api/v1/status
            port: http
      volumes:
      - name: photoprism-originals
        persistentVolumeClaim:
          claimName: photoprism-originals-pvc
      - name: photoprism-storage
        persistentVolumeClaim:
          claimName: photoprism-storage-pvc
