clusters/my-cluster/Photoprism/Photoprism-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoprism
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: photoprism
  type: ClusterIP
